--- a/scripts.yaml
+++ b/scripts.yaml
@@ -1,9 +1,9 @@
-## Turn the pool pumpoff after 4 hours it has been switch on by the sun rise sensor
+## Turn the pool pumpoff after selected number of hours hours it has been switch on by the sun rise sensor
   turnpool_off:
-###        Which basically means wait 4 hours before shutting it off
-    alias: "Turn on pump for 4 hours"  
+###        Which basically means wait the selected number of hours as per slider before shutting it off
+    alias: "Turn on pump for X hours"  
     sequence: 
-      - delay: '00:{{ states.input_slider.poolpump_time.state | int }}:10'
+      - delay: '{{ states.input_number.poolpump_time.state | int }}:00:00'
       - service: homeassistant.turn_off
         data:
           entity_id: switch.sw115
