--- a/automations.yaml
+++ b/automations.yaml
@@ -1,22 +1,39 @@
-### Pool pump
 - id: pool_pump_on
-  alias: "Turn on Pool Pump"
-  initial_state: "on"
+  alias: Turn on Pool Pump
+  initial_state: 'on'
   trigger:
     platform: sun
     event: sunrise
-    offset: '04:00:00'
+    offset: 04:00:00
   action:
     service: homeassistant.turn_on
     entity_id: switch.sw115
 
-
 - id: pool_pump_off
-  alias: "Turn off Pool Pump"
-  initial_state: "on"
+  alias: Turn off Pool Pump
+  initial_state: 'on'
   trigger:
     platform: state
     entity_id: switch.sw115
-    to: "on"
+    to: 'on'
   action:
     service: script.turnpool_off
+
+- id: p-garden_lights_on
+  alias: Pool lights on
+  trigger:
+  - event: sunset
+    offset: 00:30:00
+    platform: sun
+  action:
+  - entity_id: switch.sw114
+    service: homeassistant.turn_on
+
+- id: p-garden_lights_off
+  alias: Pool lights off
+  trigger:
+    platform: time
+    at: '23:59:00'
+  action:
+    service: homeassistant.turn_off
+    entity_id: switch.sw114
