Added LED string
Signed-off-by: Erwin vL <evlonden@gmail.com>

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -258,6 +258,7 @@ input_number:
     step: 1
 
 
+light: !include lights.yaml
 group: !include groups.yaml
 automation: !include automations.yaml
 script: !include scripts.yaml
