Added the LED lighting plus a few autmations. Also adjusted some mqtt topics to adjust for the new ESPurna firmware on some switches.
Signed-off-by: Erwin vL <evlonden@gmail.com>

--- a/automations.yaml
+++ b/automations.yaml
@@ -26,7 +26,7 @@
     offset: 00:30:00
     platform: sun
   action:
-  - entity_id: switch.sw114
+  - entity_id: switch.sw113
     service: homeassistant.turn_on
 
 - id: p-garden_lights_off
@@ -36,4 +36,69 @@
     at: '23:59:00'
   action:
     service: homeassistant.turn_off
-    entity_id: switch.sw114
+    entity_id: switch.sw113
+
+- id: d-led2-light-on
+  alias: Deck LEDS on
+  trigger:
+    event: sunset
+    offset: 00:30:00
+    platform: sun
+  action:
+    - service: light.turn_on
+      entity_id: light.led2
+      data:
+        brightness: 220
+        rgb_color: [220,220,0]
+    - service: notify.notify
+      data: 
+        message: Deck LEDs turned on
+
+- id: d-led2-light-off
+  alias: Deck LEDS Off
+  trigger:
+    at: '23:59:00'
+    platform: time
+  action:
+    entity_id: light.led2
+    service: light.turn_off
+  condition:
+    condition: state
+    entity_id: light.led2
+    state: 'on' 
+
+- id: erwin_away
+  alias: Erwin leaves the house
+  trigger: 
+    platform: zone
+    entity_id: device_tracker.erwin_erwin
+    zone: zone.home
+    event: leave
+  action:
+    service: light.turn_off
+    entity_id: 
+      - light.led2
+      - switch.sw113
+
+- id: erwin_home
+  alias: Erwin comes home
+  trigger: 
+    platform: zone
+    entity_id: device_tracker.erwin_erwin
+    zone: zone.home
+    event: enter
+  action:
+    - service: light.turn_on
+      entity_id:
+        - light.led2
+      data: 
+        rgb_color: [0, 0, 255]
+        brighness: 220
+    - service: homeassistant.turn_on
+      entity_id: 
+        - switch.sw113
+  condition: 
+    condition: sun
+    after: sunset
+    after_offset: "00:30:00"
+
