--- a/automations.yaml
+++ b/automations.yaml
@@ -53,7 +53,11 @@
     - service: notify.notify
       data: 
         message: Deck LEDs turned on
-
+  condition:
+    condition: state
+    entity_id: device_tracker.erwin_erwin
+    state: home
+     
 - id: d-led2-light-off
   alias: Deck LEDS Off
   trigger:
