--- a/automations.yaml
+++ b/automations.yaml
@@ -138,7 +138,7 @@
         - light.led1
       data: 
         rgb_color: [0, 0, 255]
-        brighness: 100
+        brightness: 100
     - service: switch.turn_on
       entity_id: 
         - switch.sw113
