--- a/configuration.yaml
+++ b/configuration.yaml
@@ -41,13 +41,13 @@ config:
 
 http:
   # Uncomment this to add a password (recommended!)
-  api_password: !secret http_passwd
+  #  api_password: !secret http_passwd
   # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
   base_url: evlonden.no-ip.biz
   ssl_certificate: !secret ssl_cert
   ssl_key: !secret ssl_key
-#  server_port: 443
-#  use_x_forward_for: True
+  #  server_port: 8132
+  #  use_x_forward_for: True
 
 
 # Checks for available updates
@@ -75,6 +75,9 @@ logbook:
 sun:
 
 ios:
+
+ffmpeg:
+  ffmpeg_bin: /usr/bin/ffmpeg
 
 # Weather prediction
 sensor:
@@ -304,7 +307,6 @@ owntracks:
 
 openuv:
   api_key: !secret openuvapi
-  scan_interval: 1800
   sensors: 
     monitored_conditions: 
       - current_uv_index
