--- a/lights.yaml
+++ b/lights.yaml
@@ -2,22 +2,24 @@
     name: "led2"
     command_topic: "/home/switch/led2/relay/0/set"
     state_topic: "/home/switch/led2/relay/0"
-    rgb_command_topic: "/home/switch/led2/color/set"
-    rgb_state_topic: "/home/switch/led2/color/"
+    rgb_command_topic: "/home/switch/led2/rgb/set"
+    rgb_state_topic: "/home/switch/led2/rgb"
     white_value_command_topic: "/home/switch/led2/channel/3/set"
     payload_on: 1
     payload_off: 0
+    rgb: true
     brightness_command_topic: "/home/switch/led2/brightness/set"
 
   - platform: mqtt
     name: "led1"
     command_topic: "/home/switch/led1/relay/0/set"
     state_topic: "/home/switch/led1/relay/0"
-    rgb_command_topic: "/home/switch/led1/color/set"
-    rgb_state_topic: "/home/switch/led1/color/"
+    rgb_command_topic: "/home/switch/led1/rgb/set"
+    rgb_state_topic: "/home/switch/led1/rgb"
     white_value_command_topic: "/home/switch/led1/channel/3/set"
     payload_on: 1
     payload_off: 0
+    rgb: true
     brightness_command_topic: "/home/switch/led1/brightness/set"
 
 
